<resources>
    <string name="app_name">EcoPonto</string>
    <string name="APPLICATION_ID">com.cooperativa.ideias.ascender.ecoponto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textascender">Ascender Ideias é uma empresa localizada na cidade de Itaperuna, que tem como missão ser referência em desenvolvimento de soluções tecnológicas, produtos e serviços
    que agregam valores que facilitem o dia-a-dia. Busca a qualidade dos serviços e produtos, proporcionando a fidelização de
    parceiros e clientes.</string>
    <string name="textelascender">Tel: (22)3823-6102,   Cel: (22)98839-9390</string>
    <string name="texlocation">Cidade Nova, Avenida Porto Alegre/ Nº290</string>
    <string name="textemail">ascenderideias@gmail.com</string>
    <string name="title_activity_maps">Nosso Óleo Nosso Rio</string>
    <string name="buttonhome">Inicio</string>
    <string name="nav_voltar">Sobre</string>
    <string name="title_activity_maps_ascender_ideias">Map</string>
    <string name="nav_button10">Localizar Ascender Ideias</string>
    <string name="nav_button11">Localizar Associação </string>
    <string name="title_activity_maps_associacao_de_catadores_de_itaperuna">Map</string>
    <string name="coleta_seletiva">Coleta Seletiva</string>
    <string name="nosso_leo_nosso_rio">Nosso Óleo Nosso Rio</string>
    <string name="hor_rios_de_coleta">HORÁRIOS DE COLETA</string>
    <string name="textRua1">Poliesportivo</string>
    <string name="textEnd1">Segunda-feira a Sexta-feira de 8 às 21h</string>
    <string name="btnCamera">Tire Uma Foto</string>
    <string name="btnemail">Envie Para Nós</string>
    <string name="title_activity_splashscreen">EcoPonto</string>
    <string name="textviewdadosapp">TextView</string>
    <string name="vers_o_1_1_2">Versão 1.1.2</string>
    <string name="textview">Versão 1.1.2</string>
    <string name="buttondadosapp">Termos de Uso e Política de Privacidade</string>
    <string name="textviewdados">ECOPONTO</string>
    <string name="textviewversaodados">Versão 1.1.2</string>
    <string name="title_activity_maps_nsr">Map</string>
    <string name="title_activity_maps_clt">Map</string>
    <string name="app_id">ca-app-pub-4036318734376935~9692211326</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="swipe_left_to_nfirst_view">Anterior</string>
    <string name="swipe_right_to_nthird_view">Anterior</string>
    <string name="buttonActivityMaps">Button</string>
    <string name="ascender">TODO</string>
    <string name="facebook_app_id">359576834525019</string>
    <string name="fb_login_protocol_scheme">fb359576834525019</string>
    <string name="cancel_login">Cancelar Login</string>
    <string name="error_login">Aconteceu um erro ao logar</string>
    <string name="firebase_error_login">Erro ao Logar</string>
    <string name="pontopacity">Opacidade</string>
    <string name="loginecopontologo">loginecoponto</string>
    <string name="ecologindois">TODO</string>
    <string name="cuidelogindois">TODO</string>
    <string name="not_log_in">Nao pode inicar uma sessão</string>
    <string name="log_out">LogOut</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">Não pode se encerrar essa sessão</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">Você não pode se autenticar com o Firebase</string>
    <string name="arvoresinicio">arvoreinicio</string>
    <string name="logout1">logout1</string>
    <string name="arvoresdois">arvoredois</string>
    <string name="cuidedois">cuidedoisvalor</string>
    <string name="lorem_ipsum">Enviar relatório</string>
    <string name="imagecamera">ImagemRegistro</string>
    <string name="choose">Choose</string>
    <string name="upload">Enviar sua imagem</string>
    <string name="password">passaword</string>
    <string name="username">username</string>
    <string name="projeto">PROJETO</string>
    <string name="idealizador">IDEALIZADOR</string>
    <string name="associa_o_de_catadores_de_itaperuna_rj">Associação de Catadores de Itaperuna-RJ</string>
    <string name="tipo_de_coleta">TIPO DE COLETA</string>
    <string name="todo">TODO</string>
    <string name="coleta_de_leo_de_cozinha">Coleta de Óleo de Cozinha</string>
    <string name="nosso_leo_nosso_rio2">Nosso Óleo Nosso Rio</string>
    <string name="saber_mais">Saber mais…</string>
    <string name="digite_seu_e_mail">Digite seu e-mail:</string>
    <string name="assunto_do_e_mail">Assunto do e-mail:</string>
    <string name="send">Enviar relatorio:</string>
    <string name="mensagem_de_relatorio">Mensagem de relatorio:</string>
    <string name="chooser_title">chooserelatorio</string>
    <string name="title_activity_login_email">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="imgtodo">TODO</string>
    <string name="title_activity_mapa_teste">Map</string>
    <string name="buttonteste">Buttonteste</string>
    <string name="card_title">Vamos Gastare?</string>
    <string name="buttoncardview">Seguir</string>
    <string name="imgcardview">IMGCARDVIEW</string>
    <string name="duolingteste">DUOLINGTESTE</string>
    <string name="card_title2">Vamos GASTARrrrr?</string>
    <string name="default_web_client_id2">Default Web Client2</string>
    <string name="title_mapa">Ver no mapa</string>
    <string name="title_localidades">Localidades</string>
    <string name="title_sobre">Sobre</string>
    <string name="oque_e_o_ecoponto">ECOPONTO é um aplicativo que contém informações específicas sobre os serviços de coletas seletivas de certas cidades. O aplicativo dispõe de informes básicos para os dependentes do projeto, contendo basicamente um conjunto de informações relacionadas ao serviço sustentável prestado. Com a possibilidade de alterações e melhorias, enfrenta constantes atualizações que tendem a melhor atender aos consumidores.</string>
    <string name="objetivo">O objetivo do aplicativo é levar o consumidor deste serviço até os pontos de coleta, facilitando assim o trabalho de quem se disponibiliza a participar das campanhas. O intuito principal é divulgar a ideia e incentivar a prática ambientalista ajudando assim os que dependem dos resíduos que são depositados e também a natureza. Espera-se que esse projeto possa beneficiar os cidadãos de Itaperuna, dando suporte para todos os dependentes dos serviços públicos de coleta seletiva. É esperado que os transtornos existentes para localizar os pontos acabem ou reduzam-se consideravelmente, evitando assim, longas esperas de caminhões, risco de atrasos e demais obstáculos enfrentados.</string>
    <string name="objetivo_title">Objetivo</string>
    <string name="o_que_o_ecoponto_text">O que é o Ecoponto?</string>
    <string name="text_informações">Ecoponto é um aplicativo que contém informações específicas sobre os serviços de coletas seletivas de certas cidades. O aplicativo dispõe de informes básicos para os dependentes do projeto, contendo basicamente um conjunto de informações relacionadas ao serviço sustentável prestado. Com a possibilidade de alterações e melhorias, enfrenta constantes atualizações que tendem a melhor atender aos consumidores. \nSeu objetivo é levar o consumidor deste serviço até os pontos de coleta, facilitando assim o trabalho de quem se disponibiliza a participar das campanhas. O intuito principal é divulgar a ideia e incentivar a prática ambientalista ajudando assim os que dependem dos resíduos que são depositados e também a natureza. Espera-se que esse projeto possa beneficiar os cidadãos de Itaperuna, dando suporte para todos os dependentes dos serviços públicos de coleta seletiva. É esperado que os transtornos existentes para localizar os pontos acabem ou reduzam-se consideravelmente, evitando assim, longas esperas de caminhões, risco de atrasos e demais obstáculos enfrentados.</string>
    <string name="projetar">Projetar</string>
    <string name="banner_id">ca-app-pub-4036318734376935/8678677088</string>
    <string name="unitId1">ca-app-pub-4036318734376935/8678677088</string>
</resources>