<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_pressed"
    tools:context="com.cooperativa.ideias.ascender.ecoponto.Activity.Activity.Activity.EnviarEmail">


    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/digite_seu_e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/edit_text_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="14dp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_to"
        android:layout_marginTop="18dp"
        android:text="@string/assunto_do_e_mail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="15dp"
        android:inputType="textEmailSubject" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_send"
        android:layout_centerVertical="true"
        android:text="@string/mensagem_de_relatorio"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_send"
        android:layout_alignStart="@+id/button_send"
        android:layout_marginBottom="28dp"
        android:gravity="start|top"
        android:inputType="" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:background="@color/button_normal"
        android:text="@string/send"
        android:textColor="#ffffff" />


</RelativeLayout>
