<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.cooperativa.ideias.ascender.ecoponto.MainLoginActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_below="@+id/imageView8"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@+id/progressBar"
        android:contentDescription="@string/arvoresdois"
        app:srcCompat="@drawable/telaloginfragdois"
        android:layout_toRightOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:contentDescription="@string/pontopacity"
        app:srcCompat="@drawable/telaloginfragtres"
        android:layout_marginRight="73dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="176dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progressBar"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/ecologindois"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:srcCompat="@drawable/telaloginfragum"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="16dp"
        android:layout_alignParentLeft="true" />


    <!--com.facebook.login.widget.LoginButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" /-->


    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        tools:ignore="UnknownId">


    </com.google.android.gms.common.SignInButton>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/signInButton"
        android:layout_alignEnd="@+id/signInButton"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/cuidedois"
        app:srcCompat="@drawable/telaloginfragquatro"
        android:layout_alignRight="@+id/signInButton"
        android:layout_marginRight="14dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_toStartOf="@+id/signInButton"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_toLeftOf="@+id/signInButton" />



</RelativeLayout>
