<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cooperativa.ideias.ascender.ecoponto.ProtejaOsEcoPontos">


    <!--Button
        android:id="@+id/btnChoose"
        android:text="@string/choose"
        android:layout_width="200dp"
        android:layout_height="wrap_content" /-->
    <ImageView
        android:id="@+id/uploadImage"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@+id/btnUpload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/imagecamera"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="51dp" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        fab:menu_backgroundColor="#5fbd6c"
        fab:fab_colorNormal="#5fbd6c"
        fab:fab_colorPressed="#55db6b"
        fab:fab_colorRipple="#99FFFFFF"
        fab:fab_showShadow="true"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#55db6b"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:fab_shadowColor="#5fbd6c"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            fab:fab_label="Registrar denuncia"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            fab:fab_label="Escolher imagem"
            fab:fab_size="mini" />



        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_black_24dp"
            fab:fab_label="Enviar denuncia"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forum_black_24dp"
            fab:fab_label="@string/lorem_ipsum"
            fab:fab_size="mini" />



    </com.github.clans.fab.FloatingActionMenu>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageName"
        android:layout_below="@+id/imageName"
        android:layout_marginTop="9dp"
        android:background="#55db6b"
        android:text="@string/upload"
        android:textColor="#ffffff"
        android:layout_alignLeft="@+id/imageName" />

    <EditText
        android:id="@+id/imageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="4"
        android:hint="Digite um código para imagem"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp" />


</RelativeLayout>
